[package]
name = "bamkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
plotly = "0.8.3"
rust-htslib = "0.40.2"

[profile.release]
opt-level = 3
lto = true
